# mbot_orbslam

./: Modified files.txt  read_lcm_log_kimera.py
kimera_dataset/: plot_kimera_pose3D.py
mbot_autonomy/: CMakeLists.txt  README.md
mbot_autonomy/include/mbot/: mbot_channels.h
mbot_autonomy/include/planning/: astar.hpp  exploration.hpp
mbot_autonomy/include/slam/: action_model.hpp  mapping.hpp  occupancy_grid.hpp  particle_filter.hpp
mbot_autonomy/scripts/: install.sh
mbot_autonomy/src/mbot/: diff_maneuver_controller.h  diff_motion_controller.cpp  drive_maze.cpp  drive_square.cpp
mbot_autonomy/src/planning/: astar.cpp  exploration.cpp  motion_planner_server.cpp
mbot_autonomy/src/slam/: action_model.cpp  mapping.cpp  moving_laser_scan.cpp  particle_filter.cpp  sensor_model.cpp  slam.cpp  slam_main.cpp
mbot_bridge/: .gitignore  README.md  pyproject.toml
mbot_bridge/docs/: cpp-api.md  index.md  js-api.md  python-api.md  server.md
mbot_bridge/mbot_cpp/: CMakeLists.txt  Config.cmake.in
mbot_bridge/mbot_cpp/include/mbot_bridge/: comms.h  json_utils.h  lcm_utils.h  mbot_json_msgs.h  robot.h
mbot_bridge/mbot_cpp/src/: robot.cpp
mbot_bridge/mbot_cpp/test/: test_mbot_api.cpp
mbot_bridge/mbot_js/: package-lock.json  package.json  webpack.config.js
mbot_bridge/mbot_js/src/: lcm_config.js  mbot_json_msgs.js  robot.js
mbot_bridge/scripts/: install.sh
mbot_bridge/services/: mbot-bridge.service
mbot_bridge/src/mbot_bridge/: server.py
mbot_bridge/src/mbot_bridge/api/: __init__.py  lcm_config.py  mbot.py
mbot_bridge/src/mbot_bridge/config/: default.yml
mbot_bridge/src/mbot_bridge/utils/: json_messages.py  type_utils.py
mbot_bridge/test/: drive.py  index.html  lcm_client.py  main.js
mbot_dataset/: read_data_frequency.py  read_lcm_log_kimera.py  read_lcm_log_orbslam.py
mbot_dataset/dataset/cam/: sensor.yaml
mbot_dataset/dataset/imu/: sensor.yaml
mbot_dataset/dataset_square/mav0/cam0/: data.csv  sensor.yaml
mbot_dataset/dataset_square/mav0/imu0/: data.csv  sensor.yaml
mbot_firmware/: CMakeLists.txt  README.md  build_all.sh  setup.sh
mbot_firmware/comms/include/comms/: common.h  listener.h  protocol.h  topic_data.h
mbot_firmware/include/config/: mbot_classic_config.h  mbot_omni_config.h
mbot_firmware/lib/pico-sdk/src/rp2_common/pico_stdio_usb/include/: tusb_config.h
mbot_firmware/mbot/include/mbot/barometer/: barometer.h
mbot_firmware/mbot/include/mbot/defs/: mbot_params.h
mbot_firmware/mbot/include/mbot/encoder/: encoder.h
mbot_firmware/mbot/include/mbot/imu/: bhy.h  imu.h
mbot_firmware/mbot/include/mbot/motor/: motor.h
mbot_firmware/mbot/include/mbot/utils/: utils.h
mbot_firmware/mbot/src/defs/: mbot_defs.c
mbot_firmware/mbot/src/encoder/: encoder.c
mbot_firmware/mbot/src/utils/: utils.c
mbot_firmware/python/: mbot_move_simple.py  mbot_test_pwm.py
mbot_firmware/python/deprecated/: mbot_test_drive.py
mbot_firmware/rc/: README.md
mbot_firmware/src/: mbot_channels.h  mbot_classic.c  mbot_classic.h  mbot_comms.c  mbot_comms.h  mbot_controller.c  mbot_controller.h  mbot_odometry.c  mbot_odometry.h  mbot_omni.c  mbot_omni.h  mbot_print.c  mbot_print.h
mbot_firmware/tests/: mbot_analog_input_test.c  mbot_calibrate_classic.c  mbot_calibrate_omni.c  mbot_classic_motor_test.c  mbot_encoder_test.c  mbot_omni_motor_test.c
mbot_firmware/tests_deprecated/: CMakeLists.txt  mbot_calibrate_classic_auto.c  mbot_closed_loop_ctrler_test.c  mbot_fake_calibration.c
mbot_gui/: .gitignore  CMakeLists.txt  README.md  setenv.sh
mbot_gui/common_utils/: CMakeLists.txt
mbot_gui/common_utils/include/common_utils/: frontiers.hpp  grid_utils.hpp  occupancy_grid.hpp
mbot_gui/common_utils/include/common_utils/geometric/: pose_trace.hpp
mbot_gui/common_utils/src/: frontiers.cpp  obstacle_distance_grid.cpp  occupancy_grid.cpp
mbot_gui/common_utils/src/geometric/: pose_trace.cpp
mbot_gui/imagesource/: CMakeLists.txt
mbot_gui/include/: botgui.hpp  drawing_functions.hpp  lcm_channels.h
mbot_gui/src/: botgui.cpp  drawing_functions.cpp
mbot_gui/vx/: CMakeLists.txt
mbot_gui/vx/src/gtk/: visualization.cpp  vx_block_maze.c
mbot_lcm_base/: .gitignore  README.md
mbot_lcm_base/mbot_lcm_serial/include/mbot_lcm_serial/: comms_common.h  lcm_config.h
mbot_lcm_base/mbot_lcm_serial/src/: lcm_serial_server_main.c
mbot_lcm_base/mbot_msgs/: CMakeLists.txt
mbot_lcm_base/mbot_msgs/lcmtypes/: mbot_analog_t.lcm  mbot_apriltag_array_t.lcm  mbot_apriltag_t.lcm  mbot_cone_array_t.lcm  mbot_cone_t.lcm  mbot_img_t.lcm
mbot_lcm_base/mbot_sys_cli/: README.md  install.sh  mbot.sh
mbot_lcm_base/mbot_sys_cli/mbot_lcm_msg/: README.md  mbot_lcm_msg.py
mbot_lcm_base/mbot_sys_cli/mbot_lcm_spy/: README.md  mbot_lcm_spy.py
mbot_lcm_base/mbot_sys_cli/mbot_service/: README.md  mbot-service.sh
mbot_lcm_base/scripts/: install.sh
mbot_vision/: .gitignore  LICENSE  README.md  mbot_image_publisher.py  save_image.py  tag_cone_detection.py  tag_cone_lcm_publisher.py  tag_cone_lcm_subscriber.py  video_streamer.py
mbot_vision/camera/: apriltag_detector.py  camera.py  cone_detector.py
mbot_vision/utils/: cone_detection_train.ipynb  config.py  ncnn_model_converter.py  utils.py
mbot_vision/utils/best_ncnn_model/: metadata.yaml  model.ncnn.param
mbot_web_app-v2.0.0/: README.txt  deploy_app.sh  install_nginx.sh  install_python_deps.sh  mbot_omni_app.py  requirements.txt
mbot_web_app-v2.0.0/config/: mbot-web-server.service  nginx.conf
rplidar_lcm_driver/: .gitmodules  CMakeLists.txt  LICENSE  README.md
rplidar_lcm_driver/rplidar_sdk/: .gitignore  .gitmodules
rplidar_lcm_driver/rplidar_sdk/sdk/: CMakeLists.txt
rplidar_lcm_driver/rplidar_sdk/sdk/sdk/src/: rplidar_driver.cpp
rplidar_lcm_driver/scripts/: install.sh
rplidar_lcm_driver/services/: install_rplidar_service.sh  mbot-rplidar-driver.service
rplidar_lcm_driver/src/: rplidar_driver.cpp
